PR 1300 * config/tc-arm.c (md_apply_fix): Fix casts to match type in printf format.